# droid-mcp-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  droid-mcp.config.json.example
.github/workflows/: README.md  release.yml
src/: droid.rs  lib.rs  main.rs  server.rs
