[package]
name = "droid-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["jakvbs"]
description = "MCP server wrapping the Droid CLI in Rust"
license = "MIT"
repository = "https://github.com/jakvbs/droid-mcp-rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
toon-format = "0.4"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
